--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,9 +45,9 @@ moreorless = "0.4.0"
 mypy = "1.4.1"
 mypy-extensions = "1.0.0"
 mypy-protobuf = "3.1.0"
-numpy = "1.21.6"
+numpy = ">=1.26"
 packaging = "23.1"
-pandas = "1.3.5"
+pandas = ">=2.1"
 pandavro = "1.5.2"
 partd = "1.4.0"
 pkgutil-resolve-name = "1.3.10"
