--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "feast-affirm"
-version = "0.28+affirm184"
+version = "0.28+affirm184.dev.joanne"
 description = "Feast - Affirm"
 authors = ["Francisco Arceo", "Ross Briden", "Maks Stachowiak"]
 readme = "README.md"
@@ -18,7 +18,7 @@ charset-normalizer = "3.0.1"
 click = "^8.1.3"
 cloudpickle = "2.2.1"
 colorama = "0.4.6"
-dask = "2021.12.0"
+dask = ">2023.3.2"
 dill = "0.3.7"
 fastapi = "0.100.1"
 fastavro = "1.8.0"
@@ -65,7 +65,7 @@ pyspark = "3.0.2"
 python-dateutil = "2.8.2"
 python-dotenv = "0.21.1"
 pytz = "2023.3"
-pyyaml = "5.1.1"
+pyyaml = ">=5.3.1"
 requests = "2.31.0"
 requests-toolbelt = "0.10.1"
 rsa = "4.9"
