--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ charset-normalizer = "3.0.1"
 click = "^8.1.3"
 cloudpickle = "2.2.1"
 colorama = "0.4.6"
-dask = ">2023.3.2"
+dask = ">=2023.3.2"
 dill = "0.3.7"
 fastapi = "0.100.1"
 fastavro = "1.8.0"
