--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "feast-affirm"
-version = "0.28+affirm184.dev.joanne"
+version = "0.28+affirm185.dev"
 description = "Feast - Affirm"
 authors = ["Francisco Arceo", "Ross Briden", "Maks Stachowiak"]
 readme = "README.md"
@@ -65,7 +65,7 @@ pyspark = "3.0.2"
 python-dateutil = "2.8.2"
 python-dotenv = "0.21.1"
 pytz = "2023.3"
-pyyaml = ">=5.3.1"
+pyyaml = ">=5.1.1"
 requests = "2.31.0"
 requests-toolbelt = "0.10.1"
 rsa = "4.9"
