--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "feast-affirm"
-version = "0.28+affirm186"
+version = "0.28+affirm187"
 description = "Feast - Affirm"
 authors = ["Francisco Arceo", "Ross Briden", "Maks Stachowiak"]
 readme = "README.md"
@@ -20,7 +20,7 @@ cloudpickle = "2.2.1"
 colorama = "0.4.6"
 dask = "2021.12.0"
 dill = "0.3.7"
-fastapi = "0.100.1"
+fastapi = "^0.109"
 fastavro = "1.8.0"
 fissix = "21.11.13"
 fsspec = "2023.1.0"
@@ -74,7 +74,7 @@ six = "1.16.0"
 sniffio = "1.3.0"
 sqlalchemy = {version = "1.4.49", extras = ["mypy"]}
 sqlalchemy2-stubs = "0.0.2a32"
-starlette = "0.27.0"
+starlette = ">=0.27.0"
 tabulate = "0.9.0"
 tenacity = "8.2.2"
 tensorflow-metadata = "1.9.0"
@@ -86,14 +86,14 @@ twine = "1.10.0"
 typed-ast = "1.5.5"
 typeguard = "^4.0.1"
 types-protobuf = "4.23.0.2"
-typing-extensions = "4.7.1"
+typing-extensions = "^4.7"
 urllib3 = "1.26.14"
-uvicorn = {version = "0.20.0", extras = ["standard"]}
-uvloop = "0.17.0"
+uvicorn = {version = "^0.20", extras = ["standard"]}
+uvloop = "^0.19"
 volatile = "2.1.0"
 watchfiles = "0.18.1"
-websockets = "10.4"
-zipp = "3.14.0"
+websockets = "^10.4"
+zipp = "^3.14"
 
 
 [build-system]
